--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="TopTierModels - Discover, analyze, and rank the best AI models from Hugging Face" />
-    <meta name="keywords" content="AI models, Hugging Face, tier list, machine learning, deep learning" />
-    <title>TopTierModels - AI Model Rankings & Analysis</title>
-    
-    <!-- Preconnect to Supabase -->
-    <link rel="preconnect" href="https://supabase.co" />
-    
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
+  <link rel="icon" href="favicon.ico" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="TopTierModels - Discover, analyze, and rank the best AI models from Hugging Face" />
+  <meta name="keywords" content="AI models, Hugging Face, tier list, machine learning, deep learning" />
+  <title>TopTierModels - AI Model Rankings & Analysis</title>
+
+  <!-- Preconnect to Supabase -->
+  <link rel="preconnect" href="https://supabase.co" />
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
