update of docs/ and update of index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,13 +3,32 @@
 
 <head>
   <meta charset="UTF-8" />
-  <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
-  <link rel="icon" href="favicon.ico" />
+  <link rel="icon" href="/favicon.ico" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="TopTierModels - Discover, analyze, and rank the best AI models from Hugging Face" />
-  <meta name="keywords" content="AI models, Hugging Face, tier list, machine learning, deep learning" />
-  <title>TopTierModels - AI Model Rankings & Analysis</title>
+
+  <!-- Primary Meta Tags -->
+  <title>TopTier Models | Clear 5-Minute AI Model Reviews & Rankings</title>
+  <meta name="description"
+    content="The next-gen AI model review platform. We transform complex technical documentation into clear, 5-minute summaries, scores, and tierlists for everyone." />
+  <meta name="keywords"
+    content="AI model reviews, Hugging Face summaries, AI tierlist, Open source AI, LLM scoring, Machine Learning explained" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://toptiermodels.netlify.app/" />
+  <meta property="og:title" content="TopTier Models | Find the Best AI Models Fast" />
+  <meta property="og:description"
+    content="Don't read 10,000-word READMEs. Get clear, scored, and simplified 5-minute reviews of the latest AI models." />
+  <meta property="og:image" content="https://toptiermodels.netlify.app/og-image.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://toptiermodels.netlify.app/" />
+  <meta property="twitter:title" content="TopTier Models | Find the Best AI Models Fast" />
+  <meta property="twitter:description"
+    content="Don't read 10,000-word READMEs. Get clear, scored, and simplified 5-minute reviews of the latest AI models." />
+  <meta property="twitter:image" content="https://toptiermodels.netlify.app/og-image.png" />
 
   <!-- Preconnect to Supabase -->
   <link rel="preconnect" href="https://supabase.co" />
