feat: added google analytics

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,18 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-D01Z8D2XBM"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-D01Z8D2XBM');
+  </script>
+
+
   <!-- Primary Meta Tags -->
   <title>TopTier Models | Clear 5-Minute AI Model Reviews & Rankings</title>
   <meta name="description"
